--- a/style.css
+++ b/style.css
@@ -196,7 +196,19 @@ h2 {
 #theme-switch:checked ~ .theme-toggle #theme-label {
     color: #f4c542; /* Adjust the text color for dark mode */
 }
-
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f0f2f5;
+    color: #333;
+    transition: background-color 0.3s, color 0.3s;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
 /* Footer Styling */
 footer {
     margin-top: 20px;
